--- a/asnlegalapp/Views/Proyectos/Activos.cshtml
+++ b/asnlegalapp/Views/Proyectos/Activos.cshtml
@@ -190,7 +190,7 @@
                                                         {
 
                                                             <tr>
-                                                                <td>@("PR0" + item.ID_proyecto + "-" + item.Fecha_creacion.Year)</td>
+                                                                <td>@("PRSV0" + item.ID_proyecto + "-" + item.Fecha_creacion.Year)</td>
                                                                 <td>
                                                                     <div class="media">
 
