--- a/asnlegalapp/Views/Shared/template/Left_sidebar.cshtml
+++ b/asnlegalapp/Views/Shared/template/Left_sidebar.cshtml
@@ -15,7 +15,7 @@
 
             <li class="nav-item"><a class="nav-link" href="#"><i class="ti-control-record"></i>Dashboard</a></li>
             <li>
-                <a href="javascript: void(0);"><i class="ti-control-record"></i>CRM <span class="menu-arrow left-has-menu"><i class="mdi mdi-chevron-right"></i></span></a>
+                <a href="javascript: void(0);"><i class="ti-control-record"></i>Clientes <span class="menu-arrow left-has-menu"><i class="mdi mdi-chevron-right"></i></span></a>
                 <ul class="nav-second-level" aria-expanded="false">
                     <li>
                         <a href="javascript: void(0);"><i class="ti-control-record"></i>Clientes <span class="menu-arrow left-has-menu"><i class="mdi mdi-chevron-right"></i></span></a>
